# clii

./: CHANGELOG  LICENSE  README.md  clii.py  pyproject.toml  setup.py  test.py  test_bad_git.py  test_clii.py  test_hello.py
