[tool.poetry]
name = "clii"
version = "0.1.1"
description = "Function annotations -> argparse parser"
authors = ["James O'Beirne <james.obeirne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
